marvel_k8s/beta-deployment-service.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: beta
spec:
  replicas: 5
  selector:
    matchLabels:
      app: beta
  strategy:
    rollingUpdate:
      maxSurge: 75%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: beta
    spec:
      containers:
        - name: beta
          image: sreemaish/sample-app:node14
          ports:
            - name: http
              containerPort: 3000
              protocol: TCP
---
kind: Service
apiVersion: v1
metadata:
  name: beta
  annotations:
    route-acl: "rand(100) lt 25"
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
  selector:
    app: beta
