marvel_k8s/ingress-canary.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-weight: "80"
  name: your-api-canary
spec:
  rules:
  - host: marvel-canary-test.com
    http:
      paths:
      - backend:
          serviceName: echo-staging
          servicePort: http
