marvel_k8s/ingress-stable.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
  name: your-api
spec:
  rules:
  - host: marvel-canary-test.com
    http:
      paths:
      - backend:
          serviceName: stable
          servicePort: http
